force-app/main/default/objects/ODS_Delete_Log__c/ODS_Delete_Log__c.object-meta.xml
<CustomObject>
    <label>ODS Delete Log</label>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ODS Delete Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>