force-app/main/default/objects/ODS_Delete_Log__c/fields/Deleted_By_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By_User_ID__c</fullName>
    <description>Who deleted the record</description>
    <label>Deleted By User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>