force-app/main/default/objects/ODS_Delete_Log__c/fields/Deleted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Date_Time__c</fullName>
    <description>When was the record deleted?</description>
    <label>Deleted Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>