force-app/main/default/objects/ODS_Delete_Log__c/fields/Deleted_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Record_ID__c</fullName>
    <label>Deleted Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>