force-app/main/default/objects/ODS_Delete_Log__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <description>The sObject type that is being deleted</description>
    <label>sObject</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>