force-app/main/default/objects/ODS_Delete_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sObject__c</columns>
    <columns>Deleted_Record_ID__c</columns>
    <columns>Deleted_By_User_ID__c</columns>
    <columns>Deleted_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>